# organicmaps

./: .gitmodules  CMakeLists.txt  sonar-project.properties
.github/workflows/: cpp-code-check.yaml  sonar_cloud.yaml
android/app/src/main/cpp/app/organicmaps/bookmarks/data/: BookmarkManager.cpp
android/app/src/main/cpp/app/organicmaps/platform/: GuiThread.hpp
drape_frontend/: CMakeLists.txt  area_shape.cpp  frontend_renderer.cpp  frontend_renderer.hpp  tile_renderer.cpp  tile_renderer.hpp
map/: everywhere_search_callback.cpp
shaders/: CMakeLists.txt  gl_program_params.cpp  gl_program_params.hpp  program_params.cpp  program_params.hpp  programs.hpp  vulkan_program_params.cpp  vulkan_program_params.hpp
shaders/GL/: shader_index.txt  tile.vsh.glsl
tiles/: CMakeLists.txt
tiles/includes/om/tiles/: configs.hpp  server_config.hpp  tile.hpp  tile_manager.hpp  tile_request_builder.hpp  tile_server.hpp
tiles/src/om/tiles/: server_thread.hpp  tile_request_builder.cpp  tile_server.cpp
tiles/tools/tile_viewer/: CMakeLists.txt  main.cpp
